--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.452.0",
+    "mammoth": "^1.9.0",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.5.0",
