--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
