--- a/package.json
+++ b/package.json
@@ -36,14 +36,16 @@
     "@tanstack/react-virtual": "^3.10.9",
     "apexcharts": "^4.3.0",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.1",
     "i18next": "^23.16.3",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.452.0",
+    "process": "^0.11.10",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.5.0",
@@ -55,7 +57,7 @@
     "react-pdf": "^9.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^5.8.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
@@ -80,6 +82,6 @@
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "vite": "^6.2.3"
   }
 }
