--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.1",
+    "file-saver": "^2.0.5",
     "i18next": "^23.16.3",
     "js-cookie": "^3.0.5",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.452.0",
-    "process": "^0.11.10",
     "mammoth": "^1.9.0",
+    "process": "^0.11.10",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.5.0",
@@ -68,6 +70,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.13",
     "@types/node": "^22.7.5",
